--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>myjar</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
